feat: adding API endpoint to get users from new league
